math.h -> math_jngen.h; various fixes

--- a/tests/Makefile
+++ b/tests/Makefile
@@ -1,8 +1,9 @@
-CXXFLAGS = -O2 -Wall -Wextra -Werror -std=c++11
+CXXFLAGS = -O2 -Wall -Wextra -Werror -std=c++14
 CXXFLAGS += -DJNGEN_DECLARE_ONLY
 LDFLAGS += -lboost_system -lboost_unit_test_framework
 
-CXX = g++-4.9
+CXX = g++-6
+# CXX = clang++-3.5
 
 .PHONY: clean run
 
